主界面tab增加红点显示

--- a/app/src/main/res/layout/layout_base_tab_item.xml
+++ b/app/src/main/res/layout/layout_base_tab_item.xml
@@ -10,5 +10,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:drawablePadding="@dimen/px5"
+            android:textSize="10sp"
             android:textColor="@drawable/home_tab_text_selector"/>
 </FrameLayout>
