--- a/app/src/main/res/layout/bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog.xml
@@ -23,7 +23,7 @@
                 android:text="@string/cancel"/>
 
         <TextView
-                android:id="@+id/title_dialog"
+                android:id="@+id/middle_txt"
                 android:layout_width="0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
