--- a/app/src/main/res/layout/activity_test_api.xml
+++ b/app/src/main/res/layout/activity_test_api.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/activity_test_api"
@@ -9,6 +9,15 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
+        android:orientation="vertical"
         tools:context="com.benyuan.xiaojs.ui.TestAPIActivity">
 
-</RelativeLayout>
+
+    <Button
+            android:id="@+id/btn_svc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="send verify code"
+            android:onClick="btnClicked"/>
+
+</LinearLayout>
