--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,23 @@
         <item name="android:windowEnterAnimation">@anim/slide_in_from_bottom</item>
         <item name="android:windowExitAnimation">@anim/slide_out_to_bottom</item>
     </style>
+    <style name="DividerHorizontal">
+        <item name="android:background">@color/hor_divide_line</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/px1</item>
+    </style>
+    <style name="DividerVertical">
+        <item name="android:background">@color/ver_divide_line</item>
+        <item name="android:layout_width">@dimen/px1</item>
+    </style>
+    <style name="BigSubmitBtn">
+        <item name="android:background">@drawable/big_submit_btn_selector</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/px80</item>
+        <item name="android:paddingTop">@dimen/px10</item>
+        <item name="android:paddingBottom">@dimen/px10</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
