--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="viewfinder_laser_trs">#7f86f60e</color>
     <color name="top_cornor_bg">#f7f7f7</color>
     <color name="totally_red_font">#ff0000</color>
+    <color name="clicked_grey_light">#d7d7db</color> <!-- 用于浅灰按钮hover -->
 </resources>
