增加被覆盖的资源

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,23 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="header_color">#ff9900</color>
+    <!--common-->
+    <color name="header_color">#3F51B5</color>
     <color name="white">#ffffff</color>
     <color name="red">#dc2314</color>
     <color name="def">#000000</color>
+    <!--app base color-->
+    <color name="main_orange">#FF9833</color>
+    <color name="main_blue">#0076FF</color>
+    <color name="main_orange_pressed">#FFab22</color>
+    <color name="main_blue_pressed">#0088FF</color>
+    <!--disable color, eg btn-->
+    <color name="disable_btn">#999999</color>
+    <!--horizontal divide line-->
+    <color name="hor_divide_line">#cccccc</color>
+    <!--vertical divide line-->
+    <color name="ver_divide_line">#cccccc</color>
+    <color name="link_hover">#1d9de2</color>
 
     <!-- 二维码 -->
     <color name="viewfinder_mask">#60000000</color>
