登录界面ui调整

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:orientation="vertical"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:focusable="true"
+              android:focusableInTouchMode="true">
 
     <View
             android:layout_marginTop="@dimen/px40"
@@ -63,7 +65,7 @@
         <RelativeLayout
                 android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
 
             <EditText
                     android:id="@+id/verify_code"
@@ -113,9 +115,10 @@
                 android:id="@+id/hide_show_pwd"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
-                android:layout_width="@dimen/px30"
-                android:layout_height="@dimen/px30"
-                android:background="#f00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/px10"
+                android:src="@drawable/hide_pwd"
                 android:hint=""/>
     </RelativeLayout>
 
