--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,12 @@
     <color name="white">#ffffff</color>
     <color name="red">#dc2314</color>
     <color name="def">#000000</color>
+    <color name="black">#000000</color>
     <!--app base color-->
-    <color name="main_orange">#FF9833</color>
-    <color name="main_blue">#0076FF</color>
-    <color name="main_orange_pressed">#FFab22</color>
+    <color name="main_orange">#ff9833</color>
+    <color name="main_blue">#0076ff</color>
+    <color name="main_orange_pressed">#ffad5d</color>
+    <color name="main_orange_disabled">#ffcc9b</color>
     <color name="main_blue_pressed">#0088FF</color>
     <!--disable color, eg btn-->
     <color name="disable_btn">#999999</color>
@@ -22,7 +24,7 @@
     <!--vertical divide line-->
     <color name="ver_divide_line">#d1d5db</color>
     <color name="link_hover">#0076ff</color>
-    <color name="hint_color">#8a8a8a</color>
+    <color name="main_gray">#8a8a8a</color>
 
     <!-- 二维码 -->
     <color name="viewfinder_mask">#60000000</color>
