--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,14 +4,15 @@
               android:orientation="vertical"
               android:layout_height="match_parent"
               android:focusable="true"
-              android:focusableInTouchMode="true">
+              android:focusableInTouchMode="true"
+              android:background="@color/main_bg">
 
     <View
             android:layout_marginTop="@dimen/px40"
             style="@style/DividerHorizontal"/>
 
     <LinearLayout
-
+            android:background="@color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:paddingLeft="@dimen/px43"
@@ -36,6 +37,7 @@
 
 
     <LinearLayout
+            android:background="@color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:paddingLeft="@dimen/px43"
@@ -62,6 +64,7 @@
     </LinearLayout>
 
     <LinearLayout
+            android:background="@color/white"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:paddingLeft="@dimen/px43"
@@ -109,6 +112,7 @@
     </LinearLayout>
 
     <RelativeLayout
+            android:background="@color/white"
             android:paddingLeft="@dimen/px43"
             android:paddingRight="@dimen/px43"
             android:layout_width="match_parent"
