--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,4 +45,19 @@
         <item name="android:textColor">#ffffff</item>
         <item name="android:gravity">center</item>
     </style>
+    <style name="MinePageItem">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:paddingLeft">@dimen/px60</item>
+        <item name="android:paddingRight">@dimen/px50</item>
+        <item name="android:paddingTop">@dimen/px35</item>
+        <item name="android:paddingBottom">@dimen/px35</item>
+        <item name="android:textSize">@dimen/font_26px</item>
+        <item name="android:textColor">@color/font_black</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:drawableRight">@drawable/ic_entrance</item>
+        <item name="android:background">@drawable/item_pressed</item>
+        <item name="android:clickable">true</item>
+    </style>
 </resources>
