--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,8 +36,8 @@
                 android:hint="@string/phone_num"
                 android:imeOptions="actionNext"
                 android:inputType="phone"
-                android:textColorHint="@color/main_gray"
-                android:textColor="@color/black"
+                android:textColorHint="@color/font_gray"
+                android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:maxLength="11"/>
 
@@ -65,8 +65,8 @@
                 android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:layout_toLeftOf="@+id/hide_show_pwd"
-                android:textColorHint="@color/main_gray"
-                android:textColor="@color/black"
+                android:textColorHint="@color/font_gray"
+                android:textColor="@color/font_black"
                 android:textSize="@dimen/font_28px"
                 android:layout_marginRight="@dimen/px22"
                 android:maxLength="16"/>
