--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,6 @@
     <color name="white">#ffffff</color>
     <color name="red">#dc2314</color>
     <color name="def">#000000</color>
-    <color name="black">#000000</color>
     <!--app base color-->
     <color name="main_orange">#ff9833</color>
     <color name="main_blue">#0076ff</color>
@@ -24,7 +23,11 @@
     <!--vertical divide line-->
     <color name="ver_divide_line">#d1d5db</color>
     <color name="link_hover">#0076ff</color>
-    <color name="main_gray">#8a8a8a</color>
+    <color name="font_gray">#999999</color>
+    <color name="font_black">#333333</color>
+    <color name="font_blue">#0076ff</color>
+    <color name="font_orange">#ff9833</color>
+    <color name="item_pressed">#f6f6f6</color>
 
     <!-- 二维码 -->
     <color name="viewfinder_mask">#60000000</color>
