--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -14,11 +14,16 @@
         <FrameLayout
                 android:id="@+id/personal_info"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/test">
+                android:layout_height="wrap_content">
 
             <ImageView
                     android:id="@+id/blur_portrait"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
+
+            <ImageView
+                    android:id="@+id/profile_cover"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/profile_bg"/>
@@ -29,15 +34,17 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/px116">
 
-                <LinearLayout
+                <RelativeLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
                     <LinearLayout
+                            android:id="@+id/base_info"
                             android:orientation="vertical"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true">
 
                         <com.benyuan.xiaojs.ui.widget.RoundedImageView
                                 android:id="@+id/portrait"
@@ -47,13 +54,18 @@
 
                         <LinearLayout
                                 android:orientation="horizontal"
+                                android:layout_gravity="center_horizontal"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/px20">
 
                             <TextView
                                     android:id="@+id/user_name"
                                     android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"/>
+                                    android:layout_height="wrap_content"
+                                    android:text="范爷"
+                                    android:textColor="@color/white"
+                                    android:textSize="@dimen/font_28px"/>
 
                             <ImageView
                                     android:id="@+id/authenticate"
@@ -64,9 +76,11 @@
 
                     <LinearLayout
                             android:id="@+id/authentication_info"
+                            android:layout_toRightOf="@+id/base_info"
                             android:orientation="vertical"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
+                            android:layout_height="wrap_content"
+                            android:visibility="gone">
 
                         <LinearLayout
                                 android:layout_width="wrap_content"
@@ -79,7 +93,7 @@
 
                     </LinearLayout>
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <TextView
                         android:layout_marginTop="@dimen/px40"
@@ -101,7 +115,8 @@
                     android:layout_marginRight="@dimen/px30"
                     android:paddingBottom="@dimen/px20"
                     android:paddingTop="@dimen/px20"
-                    android:src="@drawable/ic_settings"
+                    android:src="@drawable/edit_profiles_selector"
+                    android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
         </FrameLayout>
@@ -132,12 +147,16 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:text="0"
+                        android:textColor="@color/font_black"
+                        android:textSize="@dimen/font_26px"/>
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/fans"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/font_26px"
                         android:layout_marginTop="@dimen/px24"/>
             </LinearLayout>
 
@@ -158,12 +177,16 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:text="0"
+                        android:textColor="@color/font_black"
+                        android:textSize="@dimen/font_26px"/>
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/follows"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/font_26px"
                         android:layout_marginTop="@dimen/px24"/>
             </LinearLayout>
 
@@ -185,12 +208,16 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:text="0"
+                        android:textColor="@color/font_black"
+                        android:textSize="@dimen/font_26px"/>
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/my_course_duration"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/font_26px"
                         android:layout_marginTop="@dimen/px24"/>
 
             </LinearLayout>
@@ -213,12 +240,16 @@
                         android:gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="0"/>
+                        android:text="0"
+                        android:textColor="@color/font_black"
+                        android:textSize="@dimen/font_26px"/>
 
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/course_credit"
+                        android:textColor="@color/font_gray"
+                        android:textSize="@dimen/font_26px"
                         android:layout_marginTop="@dimen/px24"/>
             </LinearLayout>
 
@@ -264,8 +295,9 @@
                             android:layout_height="wrap_content"
                             android:layout_toLeftOf="@+id/enter_account"
                             android:text="5000.0"
-                            android:textSize="@dimen/font_26px"
+                            android:textSize="@dimen/font_38px"
                             android:textColor="@color/font_orange"
+                            android:textStyle="bold"
                             android:layout_marginRight="@dimen/px30"/>
                 </LinearLayout>
 
